# RedLightBulb

./: CMakeLists.txt  Credits.txt  README.md  RedLightbulb.vcxproj  RedLightbulb.vcxproj.filters  ToyRenderer.sln
RedLightbulb/: RedLightbulb.vcxproj  RedLightbulb.vcxproj.filters
RedLightbulb/Shaders/Lit/: LitFS.glsl  LitVS.glsl
RedLightbulb/Shaders/Unlit/: UnlitFS.glsl  UnlitVS.glsl
RedLightbulb/lib/Debug/: assimp.lib  zlibstaticd.lib
RedLightbulb/lib/Release/: assimp.exp  assimp.lib  zlibstatic.lib
RedLightbulb/lib/Shipping/: zlibstatic.lib
RedLightbulb/res/Meshes/: cubes.glb  key.fbx  key.glb  keyTextured.glb  keyTextured2.gltf
RedLightbulb/src/: Conventions  main.cpp  pch.h
RedLightbulb/src/Application/: Application.cpp  Application.hpp
RedLightbulb/src/Config/: OSInfo.hpp
RedLightbulb/src/Core/: Core.cpp  Core.hpp  RedLightbulb.cpp  RedLightbulb.hpp
RedLightbulb/src/EventManager/: EventManager.cpp  EventManagerWindows.cpp  EventManagerWindows.h
RedLightbulb/src/Math/: Math.cpp  Math.hpp
RedLightbulb/src/Renderer/: Renderer.cpp  Renderer.hpp
RedLightbulb/src/Utilities/: Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp
RedLightbulb/src/Window/: Window.cpp  Window.hpp  (+3 more)
lib/Debug/: assimp.exp
src/Config/: OSInfo.hpp
src/Core/: RedLightbulb.cpp  RedLightbulb.hpp
src/EventManager/: EventManager.cpp  EventManager.hpp  EventManagerWindows.cpp
src/Renderer/: Renderer.cpp  Renderer.hpp  RendererOpenGL.cpp  RendererOpenGL.hpp
src/Utilities/: NonCopyable.hpp
src/Window/: Window.cpp  Window.hpp  WindowWindows.cpp
(+101 files in other folders)
